@@ -1,4 +1,5 @@
 5.1
+ * Fix statement validation against partition range queries (CASSANDRA-18240)
  * CEP-15: (C*) Add git submodule for Accord (CASSANDRA-18204)
  * Fix null value handling for static columns (CASSANDRA-18241)
  * Feature Flag for Accord Transactions (CASSANDRA-18195)
